--- a/src/components/header.css
+++ b/src/components/header.css
@@ -53,6 +53,7 @@
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .nav-links:hover {
   border-bottom: 4px solid #fff;
