--- a/src/components/content.css
+++ b/src/components/content.css
@@ -3,6 +3,7 @@
   width: 50%;
   margin: 0 auto;
   margin-top: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .tabs {
   border: 1px solid;
